# parachute

./: Cargo.toml  LICENSE.txt  README.md  openapi.yaml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: action.rs  constant.rs  database.rs  download.rs  lib.rs  main.rs  network.rs  upload.rs
src/: main.rs  server.rs
