[package]
name = "parachute"
description = "Parachute is a simple and fast way to delivery files to friends."
version = "0.1.0"
edition = "2021"
author = "Henry Barreto <me@henrybarreto.dev>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
