[package]
name = "client"
description = "Parachute client"
version = "0.1.0"
edition = "2021"
author = "henry barreto <me@henrybarreto.dev>"
repository = "https://github.com/henrybarreto/parachute/client"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4" }
redis = { version = "0.21.5", features = ["tokio-comp"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
